<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFont"
    tools:context="br.edu.ifpb.ajudemais.activities.CreateAccountHelperActivity">

    <LinearLayout
        android:id="@+id/componenteActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/navigation_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="match_parent"
        android:layout_below="@+id/componenteActionBar"
        android:background="@color/colorFont">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/componentesLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorFont"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ltEdtTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hitPhone"
                        android:inputType="phone"
                        android:textColor="@color/textSecond2"
                        android:textColorHint="@color/colorPrimary" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ltEdtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ltEdtTelefone"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ltedtNome"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:hint="@string/hitEmail"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textSecond2"
                        android:textColorHint="@color/colorPrimary" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <Button
                android:id="@+id/btnFinalizeAccountCreation"
                android:layout_width="match_parent"
                android:layout_marginTop="3dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:height="@dimen/LagHeigth"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btnCreateNewAccount"
                android:textColor="@color/colorFont"
                android:textSize="@dimen/fontLogin" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
